; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/ntfs/extr_attrib.c_GetStandardInformationFromRecord.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/ntfs/extr_attrib.c_GetStandardInformationFromRecord.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i64 }

@FALSE = common dso_local global i32 0, align 4
@AttributeStandardInformation = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @GetStandardInformationFromRecord(i32 %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_6__*, align 8
  %9 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* @FALSE, align 4
  %13 = call i32 @FindFirstAttribute(i32* %7, i32 %10, i32 %11, i32 %12, %struct.TYPE_6__** %8)
  store i32 %13, i32* %6, align 4
  br label %14

14:                                               ; preds = %35, %2
  %15 = load i32, i32* %6, align 4
  %16 = call i64 @NT_SUCCESS(i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %37

18:                                               ; preds = %14
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* @AttributeStandardInformation, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %35

24:                                               ; preds = %18
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %26 = ptrtoint %struct.TYPE_6__* %25 to i64
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 1
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = add nsw i64 %26, %30
  %32 = inttoptr i64 %31 to i32*
  store i32* %32, i32** %9, align 8
  %33 = call i32 @FindCloseAttribute(i32* %7)
  %34 = load i32*, i32** %9, align 8
  store i32* %34, i32** %3, align 8
  br label %39

35:                                               ; preds = %18
  %36 = call i32 @FindNextAttribute(i32* %7, %struct.TYPE_6__** %8)
  store i32 %36, i32* %6, align 4
  br label %14

37:                                               ; preds = %14
  %38 = call i32 @FindCloseAttribute(i32* %7)
  store i32* null, i32** %3, align 8
  br label %39

39:                                               ; preds = %37, %24
  %40 = load i32*, i32** %3, align 8
  ret i32* %40
}

declare dso_local i32 @FindFirstAttribute(i32*, i32, i32, i32, %struct.TYPE_6__**) #1

declare dso_local i64 @NT_SUCCESS(i32) #1

declare dso_local i32 @FindCloseAttribute(i32*) #1

declare dso_local i32 @FindNextAttribute(i32*, %struct.TYPE_6__**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
